force-app/main/default/objects/Voucher__c/fields/Gu_Id__c.field-meta.xml
<CustomField>
    <fullName>Gu_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Gu_Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>