force-app/main/default/objects/Voucher__c/fields/PartyName__c.field-meta.xml
<CustomField>
    <fullName>PartyName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PartyName</label>
    <length>180</length>
    <type>Text</type>
</CustomField>