force-app/main/default/objects/Voucher__c/fields/VoucherType__c.field-meta.xml
<CustomField>
    <fullName>VoucherType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>VoucherType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>